vlib/v/checker/tests/assign_expr_type_err_i.vv
fn main() {
	mut foo := 1.5
	foo += 'hello'
	_ = foo
}
